--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
                         <h4 class="my-0 font-weight-bold">SAUNA INDIVIDUAL</h4>
                     </div>
                     <div class="card-body">
-                        <img src="img/sauna.jpg" class="card-img-top">
+                        <img src="img/saunA.jpg" class="card-img-top">
                         <h1 class="card-title pricing-card-title precio">Bs/. <span class="">10</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
